Bug 497592 - Total and Remaining durations are not displayed in playlist footer when the entire library is played by pressing Play now on an entire category (ex. Albums, Tracks)
Summary: Total and Remaining durations are not displayed in playlist footer when the e...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.0
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-17 05:51 UTC by John Kizer
Modified: 2025-05-26 19:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Playlist footer showing durations not populating (43.97 KB, image/png)
2024-12-17 05:51 UTC, John Kizer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Kizer 2024-12-17 05:51:05 UTC
Created attachment 176702 [details]
Playlist footer showing durations not populating

SUMMARY
The footer at the bottom of the playlist now normally shows the number of tracks remaining/total, plus the time remaining and total time of the playlist. This feature is really handy and uses the available space well!

The only glitch I've seen is that putting entire categories containing the full library into the playlist causes the time remaining/total durations to not show up.

STEPS TO REPRODUCE
1. Click on Tracks in the sidebar
2. In the header for Tracks, click the Play icon for "Play now, replacing current playlist"

OBSERVED RESULT
The playlist footer reads "1,322/1,323 tracks remaining,  remaining,  total"

EXPECTED RESULT
The playlist footer reads "1,322/1,323 tracks remaining, hh:mm:ss remaining, hh:mm:ss total"
(I don't know the actual times :-) )

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 30.4 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 4070 SUPER/PCIe/SSE2
Comment 1 Bug Janitor Service 2025-05-25 05:00:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/690
Comment 2 Jack Hill 2025-05-26 19:49:58 UTC
Git commit cf0f8b41917ec2de61fe6fc89335cf0939568600 by Jack Hill, on behalf of George Florea Bănuș.
Committed on 26/05/2025 at 19:14.
Pushed by jackh into branch 'master'.

progressindicator: fix broken string when there are more than 24 hours

M  +17   -5    src/progressindicator.cpp

https://invent.kde.org/multimedia/elisa/-/commit/cf0f8b41917ec2de61fe6fc89335cf0939568600