progressindicator: fix broken string when there are more than 24 hours

BUG: 497592